# SMN-VPN-2.0

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  THREAT_MODEL.md
.github/workflows/: ci.yml
app/: SMNVpnService.kt  SmnOneTapConnect.kt  SmnSessionKeyEngine.kt
app/src/main/java/com/smn/connect/: ConnectActivity.kt  IdentityStore.kt
app/src/main/java/com/smn/vpncore/crypto/: SmnCryptoBindings.kt
smn-crypto-core/: Cargo.toml  build.rs
smn-crypto-core/src/: lib.rs  smn_crypto.udl
